Switch to GPT-4o-mini for vision analysis via OpenRouter
- Changed from x-ai/grok-vision-beta to openai/gpt-4o-mini
- GPT-4o-mini is widely available and supports vision
- Updated fallback to google/gemini-flash-1.5-8b
- This should resolve the model availability issues

--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
             
             try {
                 const payload = {
-                    model: "x-ai/grok-vision-beta",
+                    model: "openai/gpt-4o-mini",
                     messages: [
                         {
                             role: "user",
@@ -1470,7 +1470,7 @@
                         console.log('🔄 Trying with Google Gemini Flash...');
                         const fallbackPayload = {
                             ...payload,
-                            model: "google/gemini-flash-1.5"
+                            model: "google/gemini-flash-1.5-8b"
                         };
                         
                         const fallbackResponse = await fetch('https://openrouter.ai/api/v1/chat/completions', {
