--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
             
             try {
                 const payload = {
-                    model: "openai/gpt-4o-mini",
+                    model: "x-ai/grok-vision-beta",
                     messages: [
                         {
                             role: "user",
@@ -1447,7 +1447,7 @@
                 const response = await fetch('https://openrouter.ai/api/v1/chat/completions', {
                     method: 'POST',
                     headers: {
-                        'Authorization': 'Bearer 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',
+                        'Authorization': 'Bearer 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',
                         'Content-Type': 'application/json',
                         'HTTP-Referer': window.location.origin,
                         'X-Title': 'AI Study Assistant'
@@ -1470,13 +1470,13 @@
                         console.log('🔄 Trying with Google Gemini Flash...');
                         const fallbackPayload = {
                             ...payload,
-                            model: "google/gemini-flash-1.5-8b"
+                            model: "meta-llama/llama-3.2-11b-vision-instruct:free"
                         };
                         
                         const fallbackResponse = await fetch('https://openrouter.ai/api/v1/chat/completions', {
                             method: 'POST',
                             headers: {
-                                'Authorization': 'Bearer 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',
+                                'Authorization': 'Bearer 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',
                                 'Content-Type': 'application/json',
                                 'HTTP-Referer': window.location.origin,
                                 'X-Title': 'AI Study Assistant'
